refactored convertTemp() w/ addition of formatTemp(); fixed null forecast data on update; tweaked button styling on mobile swipe

--- a/src/styles/components/forecastday.scss
+++ b/src/styles/components/forecastday.scss
@@ -36,7 +36,7 @@
   color: gray;
   font-size: 0.9rem;
   // padding: 4% 0 0 0;
-  margin-left: 80%;
+  margin-left: 70%;
   margin-top: 10%;
 }
 
